--- a/index.html
+++ b/index.html
@@ -221,79 +221,26 @@
     <!-- HOME PAGE SECTION -->
     <section id="home-page" class="page-section active">
         <!-- Hero Section -->
-        <section class="hero">
-            <div class="container">
-                <h1>Bhagwan Shailja Narayan</h1>
-                <p>LORD SHAILJA NARAYAN</p>
-            </div>
-        </section>
 
-        <!-- Image/Video Slider -->
-        <!-- <section class="slider-section">
-            <div id="imageSlider" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#imageSlider" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#imageSlider" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#imageSlider" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#imageSlider" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="image.JPG" class="d-block w-100 slider-img" alt="Bhagwan Shailja Narayan">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="1.JPG" class="d-block w-100 slider-img" alt="Slide 2">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="2.JPG" class="d-block w-100 slider-img" alt="Slide 3">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="3.JPG" class="d-block w-100 slider-img" alt="Slide 4">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#imageSlider" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#imageSlider" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </section> -->
+
+
 
         <!-- Main Content Section -->
         <main class="main-content">
             <div class="container">
                 <div class="row">
                     <div class=" mx-auto">
-                        <!-- Featured Announcements -->
-                        <!-- <section class="announcements mb-5">
-                            <h2 class="section-title">Latest Updates</h2>
-                            <div class="alert alert-info alert-dismissible fade show" role="alert">
-                                <strong><i class="fas fa-calendar-alt"></i> Schedule Available</strong>
-                                <p>Schedule for December 2025 is now uploaded. <a href="#" onclick="navigateTo('news')" class="alert-link">View Schedule</a></p>
-                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                            </div>
-                            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                                <strong><i class="fas fa-book"></i> New Books Available</strong>
-                                <p>List of Books is now available. <a href="#" class="alert-link">Browse Books</a></p>
-                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                            </div>
-                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                                <strong><i class="fas fa-star"></i> Maha Yagya</strong>
-                                <p>Maha Laxmi Narayan Maha Yagya details. <a href="#" class="alert-link">Learn More</a></p>
-                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                            </div>
-                        </section> -->
 
-                        <!-- Introduction Section -->
 
 
 
                         <section class="intro-section mb-5">
                             <h2 class="section-title">LORD SHAILJA NARAYAN</h2>
-                            <div class="row align-items-center g-4">
+                            <div class="row  g-4">
+                                <div class="col-12 col-lg-5 text-center">
+                                    <img src="images/image.JPG" alt="Bhagwan Shailja Narayan"
+                                        class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;">
+                                </div>
                                 <div class="col-12 col-lg-7">
                                     <p class="intro-text">
                                         God is creator, regulator and ultimate eliminator (dooms day) in the universe.
@@ -331,10 +278,7 @@
                                         feelings of any person or for opposing any religion, what so ever it may be.
                                     </p>
                                 </div>
-                                <div class="col-12 col-lg-5 text-center">
-                                    <img src="images/image.JPG" alt="Bhagwan Shailja Narayan"
-                                        class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;">
-                                </div>
+
                             </div>
 
                         </section>
@@ -366,11 +310,11 @@
                                     </a>
                                 </div>
                                 <div class="col-md-6">
-                                    <a href="#" onclick="navigateTo('activities')"
+                                    <a href="#" onclick="navigateTo('events')"
                                         class="quick-link-card card text-decoration-none h-100">
                                         <div class="card-body text-center">
                                             <i class="fas fa-calendar-alt fa-2x mb-3 text-info"></i>
-                                            <h5 class="card-title">Activities</h5>
+                                            <h5 class="card-title">Events</h5>
                                             <p class="card-text">Join our spiritual programs and community events</p>
                                         </div>
                                     </a>
@@ -561,31 +505,27 @@
         </main>
     </section>
 
-    <!-- ACTIVITIES PAGE SECTION -->
-    <section id="activities-page" class="page-section">
+    <!-- EVENTS PAGE SECTION -->
+    <section id="events-page" class="page-section">
         <main class="main-content">
             <div class="container py-5">
                 <div class="row">
                     <div class="col-lg-10 mx-auto">
                         <!-- Page Title -->
                         <div class="page-header mb-5">
-                            <h2 class="page-title">Activities & Programs</h2>
-                            <p class="lead text-muted">Spiritual programs, events, and community activities</p>
+                            <h2 class="page-title">Events & Programs</h2>
+                            <p class="lead text-muted">Spiritual programs and events</p>
                         </div>
 
                         <!-- Maha Yagya Gallery Section - Dynamic Content -->
                         <section class="maha-yagya-gallery mt-5 mb-5">
-                            <h3 class="mb-4 text-center">Maha Laxmi Narayan Maha Yagya Coverage</h3>
-                            <p class="text-center text-muted mb-5">विलय धाम में आयोजित महा लक्ष्मीनारायण महायज्ञ की
-                                झलकियां</p>
-
                             <!-- Gallery will be loaded dynamically from JSON -->
-                            <div id="mahayagya-gallery-container">
+                            <div id="events-container">
                                 <div class="text-center">
                                     <div class="spinner-border text-primary" role="status">
-                                        <span class="visually-hidden">Loading gallery...</span>
+                                        <span class="visually-hidden">Loading events...</span>
                                     </div>
-                                    <p class="text-muted mt-2">Loading gallery...</p>
+                                    <p class="text-muted mt-2">Loading events...</p>
                                 </div>
                             </div>
                         </section>
@@ -610,13 +550,34 @@
                         </section>  -->
 
 
-                        <!-- Call to Action -->
-                        <section class="cta-section text-center py-4 bg-light rounded mt-5">
-                            <h3>Participate in Our Activities</h3>
-                            <p>We welcome all devotees and spiritual seekers to join our programs and activities.</p>
-                            <a href="#" onclick="navigateTo('contact')" class="btn btn-primary btn-lg mt-3">Register or
-                                Inquire</a>
-                        </section>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </section>
+
+    <!-- ACTIVITIES PAGE SECTION -->
+    <section id="activities-page" class="page-section">
+        <main class="main-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 mx-auto">
+                        <!-- Page Title -->
+                        <div class="page-header mb-5">
+                            <h2 class="page-title">Activities</h2>
+                            <p class="lead text-muted">Recent activities and coverage</p>
+                        </div>
+
+                        <!-- Activities Container (Dynamic Content) -->
+                        <div id="activities-container">
+                            <div class="text-center">
+                                <div class="spinner-border text-primary" role="status">
+                                    <span class="visually-hidden">Loading activities...</span>
+                                </div>
+                                <p class="text-muted mt-2">Loading activities...</p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -675,13 +636,44 @@
                             </div>
                         </section>
 
-                        <!-- Call to Action -->
-                        <section class="cta-section text-center py-4 bg-light rounded mt-5">
-                            <h3>Learn More About Our Books</h3>
-                            <p>Explore our collection of spiritual literature and wisdom.</p>
-                            <a href="#" onclick="navigateTo('contact')" class="btn btn-primary btn-lg mt-3">Inquire
-                                About Books</a>
-                        </section>
+
+                    </div>
+                </div>
+            </div>
+        </main>
+    </section>
+
+    <!-- EVENT DETAILS PAGE SECTION (SPA) -->
+    <section id="event-details-page" class="page-section">
+        <main class="main-content">
+            <!-- Hero Section -->
+            <div id="spa-event-hero" class="event-details-hero"
+                style="background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/image.JPG'); background-size: cover; background-position: center; color: white; padding: 100px 0 60px; text-align: center; margin-bottom: 40px;">
+                <div class="container">
+                    <h1 id="spa-event-title" class="display-4 fw-bold mb-3">Loading Event...</h1>
+                    <span id="spa-event-subtitle" class="display-4 fw-bold mb-3"></span>
+                    <p id="spa-event-date" class="lead mb-0"></p>
+                    <div class="mt-4">
+                        <button onclick="navigateTo('events')" class="btn btn-outline-light rounded-pill px-4">
+                            <i class="fas fa-arrow-left me-2"></i>Back to Events
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container mb-5">
+                <div class="row">
+                    <div class="col-lg-10 mx-auto">
+                        <div id="spa-event-description" class="lead text-center text-muted mb-5"></div>
+
+                        <!-- Gallery Container -->
+                        <div id="spa-event-gallery-container">
+                            <div class="text-center">
+                                <div class="spinner-border text-primary" role="status">
+                                    <span class="visually-hidden">Loading gallery...</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -737,42 +729,6 @@
                             </div>
                         </section>
 
-                        <!-- Contact Form -->
-                        <!-- <section class="contact-form-section bg-light p-5 rounded">
-                            <h3 class="mb-4">Send us a Message</h3>
-                            <form id="contactForm">
-                                <div class="mb-3">
-                                    <label for="name" class="form-label">Full Name</label>
-                                    <input type="text" class="form-control" id="name" name="name" required>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="email" class="form-label">Email Address</label>
-                                    <input type="email" class="form-control" id="email" name="email" required>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="phone" class="form-label">Phone Number (Optional)</label>
-                                    <input type="tel" class="form-control" id="phone" name="phone">
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="subject" class="form-label">Subject</label>
-                                    <input type="text" class="form-control" id="subject" name="subject" required>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="message" class="form-label">Message</label>
-                                    <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-                                </div>                               
-
-                                <button type="submit" class="btn btn-primary btn-lg w-100">
-                                    <i class="fas fa-paper-plane"></i> Send Message
-                                </button>
-                            </form>
-                            <div id="formMessage" class="alert mt-3 d-none"></div>
-                        </section> -->
-
 
                     </div>
                 </div>
@@ -783,7 +739,7 @@
     <!-- Footer will be loaded here by jQuery -->
     <div id="footer-container"></div>
 
-    <!-- Lightbox/Image Viewer -->
+    <!-- Lightbox/Image Viewer (Events) -->
     <div id="lightbox-overlay" class="lightbox-overlay">
         <button class="lightbox-close" id="lightbox-close" aria-label="Close">
             <i class="fas fa-times"></i>
@@ -801,6 +757,24 @@
         <div class="lightbox-counter" id="lightbox-counter"></div>
     </div>
 
+    <!-- Lightbox/Image Viewer (Books) -->
+    <div id="book-lightbox-overlay" class="lightbox-overlay">
+        <button class="lightbox-close" id="book-lightbox-close" aria-label="Close">
+            <i class="fas fa-times"></i>
+        </button>
+        <button class="lightbox-nav lightbox-prev" id="book-lightbox-prev" aria-label="Previous">
+            <i class="fas fa-chevron-left"></i>
+        </button>
+        <div class="lightbox-container">
+            <img id="book-lightbox-image" class="lightbox-image" alt="Book Full Image">
+            <div class="lightbox-title" id="book-lightbox-title"></div>
+        </div>
+        <button class="lightbox-nav lightbox-next" id="book-lightbox-next" aria-label="Next">
+            <i class="fas fa-chevron-right"></i>
+        </button>
+        <div class="lightbox-counter" id="book-lightbox-counter"></div>
+    </div>
+
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -811,7 +785,7 @@
     <script src="js/script.js"></script>
 
     <!-- Carousel Manager Script -->
-    <script src="js/carousel-manager.js"></script>
+    <!-- <script src="js/carousel-manager.js"></script> -->
 
     <!-- Book Section Script (was missing) -->
     <script src="js/book-section.js"></script>
@@ -819,11 +793,14 @@
     <!-- News Section Script -->
     <script src="js/news-section.js"></script>
 
-    <!-- Contact Form Script -->
-    <script src="js/contact-form.js"></script>
+
+
+    <!-- Events Section Script -->
+    <script src="js/events-section.js"></script>
 
     <!-- Gallery Generator Script -->
     <script src="js/gallery-generator.js"></script>
+    <script src="js/activities-section.js"></script>
 
     <!-- SPA Router Script -->
     <script src="js/spa.js"></script>
